保存機能の実装

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <div id="chart" class="chart_style"></div>
+  <button id="js-button" type="button">保存</button>
 </body>
 <script src="script.js"></script>
+<script src="savesvg.js"></script>
 </html>
